rustdocs/errors/rust-bitcoin-bitcoin-src-consensus-error.rs.txt
error[E0433]: failed to resolve: there are too many leading `super` keywords
  --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:12:5
   |
12 | use super::IterReader;
   |     ^^^^^ there are too many leading `super` keywords

error[E0433]: failed to resolve: you might be missing crate `core`
 --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:5:5
  |
5 | use core::convert::Infallible;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `hex`
 --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:8:5
  |
8 | use hex::error::{InvalidCharError, OddLengthStringError};
  |     ^^^ use of unresolved module or unlinked crate `hex`
  |
help: you might be missing a crate named `hex`, add it to your project and import it in your code
  |
5 + extern crate hex;
  |

error[E0432]: unresolved import `core`
 --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:6:5
  |
6 | use core::fmt;
  |     ^^^^
  |     |
  |     you might be missing crate `core`
  |     help: try using `std` instead of `core`: `std`

error[E0432]: unresolved import `internals`
 --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:9:5
  |
9 | use internals::write_err;
  |     ^^^^^^^^^ use of unresolved module or unlinked crate `internals`
  |
help: you might be missing a crate named `internals`, add it to your project and import it in your code
  |
5 + extern crate internals;
  |

error[E0432]: unresolved import `io`
   --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:125:13
    |
125 |         use io::ErrorKind;
    |             ^^
    |             |
    |             unresolved import
    |             help: a similar path exists: `std::io`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `primitives`
   --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:165:27
    |
165 |     Witness(io::ReadError<primitives::witness::WitnessDecoderError>),
    |                           ^^^^^^^^^^ use of unresolved module or unlinked crate `primitives`
    |
    = help: you might be missing a crate named `primitives`

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
  --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:95:8
   |
95 |     Io(io::Error),
   |        ^^ use of unresolved module or unlinked crate `io`
   |
   = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
   |
95 -     Io(io::Error),
95 +     Io(i8::Error),
   |
help: consider importing this module
   |
 5 + use std::io;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:123:11
    |
123 | impl From<io::Error> for Error {
    |           ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
123 - impl From<io::Error> for Error {
123 + impl From<i8::Error> for Error {
    |
help: consider importing this module
    |
  5 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:124:16
    |
124 |     fn from(e: io::Error) -> Self {
    |                ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
124 -     fn from(e: io::Error) -> Self {
124 +     fn from(e: i8::Error) -> Self {
    |
help: consider importing this module
    |
  5 + use std::io;
    |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `io`
   --> ../rust-bitcoin/bitcoin/src/consensus/error.rs:165:13
    |
165 |     Witness(io::ReadError<primitives::witness::WitnessDecoderError>),
    |             ^^ use of unresolved module or unlinked crate `io`
    |
    = help: you might be missing a crate named `io`
help: a builtin type with a similar name exists
    |
165 -     Witness(io::ReadError<primitives::witness::WitnessDecoderError>),
165 +     Witness(i8::ReadError<primitives::witness::WitnessDecoderError>),
    |

error: aborting due to 11 previous errors

Some errors have detailed explanations: E0432, E0433.
For more information about an error, try `rustc --explain E0432`.
